# alt-linux-doc-helper

./: .gitignore  README.md  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
generated_configs/: .gitignore  your_choice.json.dvc
notebooks/: hello_world.ipynb  retreiver_usage_example.ipynb
src/agents/answer_generator/: answer_generator.py  answer_generator.yaml  test.ipynb
src/agents/base_subgraph/: base_subgraph.py
src/agents/doc_searcher/: doc_searcher.py  stub.yaml  test.ipynb
src/agents/main_graph/: main_graph.py  test.ipynb
src/app/: linux_helper.py
src/indexing/: choice_json_gen.py  choice_user_to_qdrant.py  retrieve_example.py  retriever.py
src/state/: state.py
src/utils/: project_path.py  yaml_reader.py
