[project]
name = "alt-linux-doc-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "langchain-ollama>=0.3.0",
    "langgraph>=0.3.18",
    "ollama>=0.4.7",
    "streamlit>=1.44.1",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "qdrant_client",
    "tqdm",
    "transformers",
]
